<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="mil.emp3.examples.cameraandwms.CustomActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/WmsParametersLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/UrlText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Service"
                android:text="@string/UrlDefault" />

            <Spinner
                android:id="@+id/VersionText"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Version"
                android:spinnerMode="dropdown"
                android:text="@string/VersionDefault" />

            <Spinner
                android:id="@+id/TileFormatText"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tile Format"
                android:spinnerMode="dropdown"
                android:text="@string/TileFormatDefault" />

            <Spinner
                android:id="@+id/TransparentText"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Transparent"
                android:spinnerMode="dropdown"
                android:text="@string/TransparentDefault" />

            <EditText
                android:id="@+id/LayerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Layer"
                android:text="@string/sample"
                style="@style/Widget.AppCompat.Spinner.Underlined" />

            <EditText
                android:id="@+id/ResolutionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Meters per pixel"
                android:inputType="numberDecimal"
                android:text="@string/ResolutionDefault" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:useDefaultMargins="true"
                android:alignmentMode="alignBounds"
                android:columnOrderPreserved="false"
                android:columnCount="2">

                <Button
                    android:id="@+id/CancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/CancelButton" />

                <Button
                    android:id="@+id/OKButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="@string/OKButton" />
                <Button
                    android:id="@+id/ZoomOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/ZoomOut" />

                <Button
                    android:id="@+id/ZoomIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@string/ZoomIn" />
                <Button
                    android:id="@+id/PanLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="@string/PanLeft" />

                <Button
                    android:id="@+id/PanRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="@string/PanRight" />
                <Button
                    android:id="@+id/TiltUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:text="@string/TiltUp" />

                <Button
                    android:id="@+id/TiltDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:text="@string/TiltDown" />
                <Button
                    android:id="@+id/rollCCW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:text="@string/rollCCW" />

                <Button
                    android:id="@+id/rollCW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:text="@string/rollCW" />
            </GridLayout>

        </LinearLayout>
    </ScrollView>

    <mil.emp3.api.MapView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:map_engine_name="mil.emp3.worldwind.MapInstance"
        app:map_engine_apk_name="mil.emp3.worldwind" />

    <!--RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".TestCameraActivity">

        <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout-->
</LinearLayout>
